# cpptest

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  readme.md
.github/workflows/: test.yml
UnitTest/: Makefile
UnitTest/src/: Main.cpp  TestCase.h  UnitTest.h
algorithm/: a.out  file1  lele_test_algorithm.cpp  lele_test_heap_sort.cpp  lele_test_heap_sort.cpp.bak  lele_test_linklist  lele_test_linklist.cpp  lele_test_list.c  lele_test_merge  lele_test_merge.cpp  lele_test_tree  lele_test_tree.cpp
algorithm/linklist/: lele_test_linklist.cpp
assert/: a.out  lele_test_assert.cpp
autoguard/: autoguard.md
base64/src/: Main.cpp
c/: .ycm_extra_conf.py
c++/auto/: Makefile  lele_test_auto  lele_test_auto.cpp
c++/class/: Makefile  lele_test_class  lele_test_class.cpp
c++/crtp/: crtp_test.cpp
c++/enum/: lele_test_enum.cpp
c++/exception/: lele_test_throw_expt  lele_test_throw_expt.cpp
c++/func/: Makefile  lele_test_func  lele_test_func.cpp
c++/future/: lele_test_future.cpp
c++/iostream/: lele_test_readline.cpp
c++/lambda/: lele_test_lambda
c++/map/: lele_test_map  lele_test_map.cpp
c++/move/: Makefile  lele_test_move  lele_test_move.cpp  lele_test_str_move  lele_test_str_move.cpp
c++/rvalue/: Makefile  lele_test_rvalue
c++/static/: lele_test_static.cpp
c++/string/: lele_test_string  lele_test_string.cpp
c++/struct/: lele_test_struct.cpp
c++/template/: Makefile  (+2 more)
c-cpp/: README.md
c-cpp/tests/: CMakeLists.txt
cast/: a.out
centos/: vimrc
ci/: travis.sh
class/: lele_test_class  lele_test_class.cpp
cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  spdlog.cmake  unittest.cmake
color/: lele_test_color.cpp
cond/: lele_test_condwait  lele_test_condwait.cpp  lele_test_condwait.i
cycfork/: lele_test_for_fork  lele_test_for_fork.c
default/: lele_test_default  lele_test_default.cpp
despatn/: singleton.cpp  singleton.h
destruct/: lele_test_destruct  lele_test_destruct.cpp
dl/: a.out  lele_test_dl.cpp
emptystring/: emptystring  emptystring.cpp
endian/: Makefile  lele_test_endian  lele_test_endian.c  lele_test_endian.cpp
epoll/: lele_test_client.cpp  lele_test_server  lele_test_server.cpp  socketException.hpp
esccode/: loadBar  loadBar.c
fflush/: lele_test_fflush.c
gbktoutf8/: GbkToUtf8.cpp  lele_test_ufttogbk.cpp
gdb/: lele_test_gdb  lele_test_gdb.cpp
getcurrtime/: getcurrtime
getopt/: readme.md
git/: command.sh
http/: lele_test_http  lele_test_http.cpp
is_blank/: lele_test_is_blank.cpp
lib/: CMakeLists.txt  add.cpp
macro/: lele_test_macro.cpp
makefile/: Makefile
mem/: lele_test_memcpy.cpp  test_memcpy.cpp
mutex/: lele_test_pthread_mutex.cpp
opt/: lele_test_opt.cpp
parseconfig/: parseconf.cpp
ptrtoptr/: README.md  movestr  movestr.c
python/: parseErrorCode.py
rand/: Makefile  lele_test_rand.cpp
signo/: a.out  lele_test_sigrelse.c
simBank/: Makefile
sizeof/: lele_test_sizeof.c  lele_test_sizeof.cpp
socket/: lele_test_client  lele_test_client.cpp  lele_test_server  lele_test_server.cpp
src/: CMakeLists.txt  FibonacciTemplate.cpp  main.cpp
strchr/: lele_test_strchr  lele_test_strchr.cpp  makefile
string/: lele_test_string.cpp  lele_test_string_loop.cpp
strtok/: a.out  lele_test_strtok.cpp  test_strtok.cpp
test/: CMakeLists.txt  bitset_test.cpp  declval_test.cpp  exception_test.cpp  first_test.cpp  forward_declare_test.cpp  map_test.cpp  move_semantics_test.cpp  object_model_test.cpp  random_test.cpp  second_test.cpp  spdlog_test.cpp  sqlite3_test.cpp  template_arg_test.cpp
test/base/: CMakeLists.txt  self_increase.cpp  struct_init_test.cpp
test/chrono/: CMakeLists.txt  chrono_test.cpp
test/constexpr/: CMakeLists.txt  constexpr_test.cpp
test/crtp/: CMakeLists.txt  crtp_test.cpp
test/except/: CMakeLists.txt  runtime_error_test.cpp
test/func_operator/: CMakeLists.txt  function_operator_test.cpp
test/gtest/: CMakeLists.txt  gtest_test.cpp
test/stl/: CMakeLists.txt
test/stl/container/: CMakeLists.txt  map_test.cpp
test/stl/iterator/: CMakeLists.txt
test/thread/: CMakeLists.txt  thread_member_func.cpp
test/time/: CMakeLists.txt  gettime_test.cpp
tests/: CMakeLists.txt  GUnitTests.cpp
tests/CMakeModules/: Findgoogletest.cmake
tests/SpinLock/: readme.md
tests/algorithm/: test_dependence_traval.cpp
tests/bitset/: test_bitset.cpp
tests/cmake_multiple_src_directory_test/: CmakeMultipleSrcDirectoryTest.cpp
tests/contructor/: test_contructor.cpp
tests/google_test_trial/: gtest_trail.h
tests/goole_test_trial/: gtest_trail.cpp  gtest_trial.cpp
tests/openssl_md5/: test_openssl_md5.cpp
tests/pthread_cond/: test_pthread_cond.cpp  test_pthread_cond_awakeup.cpp
tests/stl/: std_copy_test.cpp
tests/string_view/: string_view_constexpr.cpp
time/: a.out  lele_test_localtime.cpp  lele_test_time.cpp
tinyxml2/: 1.xml  bizctrl.xml  lele_test_tinyxml2  lele_test_tinyxml2.cpp  makefile
unittest/: lele_test_define.cpp  lele_test_main.c  lele_test_memcpy.c  lele_test_memcpy.cpp  lele_test_typedef.cpp
vector/: a.out  lele_test_vetor.cpp
write/: TestWriteFile1.cpp
xml/: lele_test_xml  lele_test_xml.cpp  makefile
(+28 files in other folders)
