set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)

find_package("googletest" REQUIRED)
if (GOOGLETEST_FOUND)
    add_subdirectory(${GTEST_SOURCE_DIR} ${CMAKE_BINARY_DIR}/googletest)
    include_directories(AFTER SYSTEM ${GTEST_INCLUDE_DIR})
    file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
    ADD_EXECUTABLE(GUnitTests ${SRC_FILES})
    target_link_libraries(GUnitTests gtest gtest_main)
    set_property(TARGET GUnitTests PROPERTY CXX_STANDARD 17)
    add_test(NAME gunittests COMMAND GUnitTests)
else(GOOGLETEST_FOUND)
    MESSAGE(STATUS "GOOGLETEST NOT FOUND, gtest will not run")
endif(GOOGLETEST_FOUND)
